[project]
name = "projeto-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asttokens==3.0.0",
    "beautifulsoup4==4.14.2",
    "cachetools==4.2.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dataclasses==0.6",
    "datetime==5.5",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.60.1",
    "google==3.0.0",
    "google-api-core==1.31.5",
    "google-api-python-client==2.6.0",
    "google-auth==1.35.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==0.4.1",
    "google-drive==0.5.1",
    "googleapis-common-protos==1.56.0",
    "httplib2==0.31.0",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.1",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uritemplate==3.0.1",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "zope-interface==8.1",
]
